<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="durationformatshort" translatable="false"><g id="format">%2$d:%5$02d</g></string>
    <string name="durationformatlong" translatable="false"><g id="format">%1$d:%3$02d:%5$02d</g></string>
    <string name="app_name">写真袋</string>
    <string name="password_notification_local">パスワード</string>
    <string name="password_notification_local_download">』の受け取りが完了したよ！</string>
    <string name="password_notification_local_upload">』の送信が完了したよ！</string>
    <string name="pb_download_download_complete_tv_talk">写真の受け取りが\n完了したよ！</string>
    <string name="pb_download_downloading_tv_talk">受け取り中だよ\nもう少し待ってね</string>
    <string name="pb_download_input_pass_exceeded_tv_talk">疲れたよ\nすこし休ませて</string>
    <string name="pb_download_input_pass_exceeded_password_message">10回連続で\n合言葉が一致しなかったので\nしばらくたってからおためしください。</string>
    <string name="pb_download_input_pass_exceeded_password_countdown">あと　 <xliff:g id="hour">%1$s</xliff:g>:<xliff:g id="min">%2$s</xliff:g>:<xliff:g id="sec">%3$s</xliff:g>  お待ちください</string>
    <string name="pb_download_input_pwd_tv">教えてもらった合言葉を入力</string>
    <string name="pb_download_input_pwd_tv_talk">秘密の合言葉を\n教えてね</string>
    <string name="pb_download_purchase_notice_tv_numofphoto">枚数</string>
    <string name="pb_download_purchase_notice_tv_numofdownload">受取り数</string>
    <string name="pb_download_purchase_notice_tv_purchasehoney">クマにハチミツを与えると\n写真袋を受け取る事ができます。</string>
    <string name="pb_download_purchase_notice_tv_talk_purchase">ハチミツの\nにおい…　</string>
    <string name="pb_download_purchase_notice_tv_talk_no_honey">ハチミツが\nないで…　</string>
    <string name="pb_download_purchase_notice_btn_purchase">ハチミツをあげる</string>
    <string name="pb_download_purchase_notice_btn_exchange_donguri">ドングリをハチミツに交換</string>
    <string name="pb_download_purchase_notice_btn_shop">ハチミツを購入</string>
    <string name="pb_download_purchase_notice_btn_cancel">やめる</string>
    <string name="pb_download_purchase_notice_tv_albuminformation">この写真袋は有効期限が切れています。</string>
    <string name="pb_download_wrong_title">合言葉がありません</string>
    <string name="pb_download_wrong_kuma">違うみたいやで~</string>
    <string name="pb_download_wrong_info">入力した合言葉が間違っているか、\n合言葉が存在しません。\n\n再度お試しください。\n</string>
    <string name="pb_download_wrong_btn_text">合言葉を入力する</string>
    <string name="pb_download_confirm_title">注意事項</string>
    <string name="pb_download_confirm_text_1">以下の注意事項をよく読み、ご了承の上、ダウンロードください。</string>
    <string name="pb_download_confirm_text_21">このコンテンツは著作権保護のため、スマートフォン端末には保存できません。写真袋アプリ内でのみご覧いただけます。</string>
    <string name="pb_download_confirm_text_22">このコンテンツは著作権保護のため、スマートフォン端末には保存できません。また、コンテンツは一定の保存期間を過ぎると、アプリから自動的に削除されます。期間内に写真袋アプリ内でのみご覧いただけます。</string>
    <string name="pb_download_confirm_text_3">コンテンツ保存期間：%s日</string>
    <string name="pb_download_confirm_text_4">上記に同意する</string>
    <string name="pb_download_confirm_btn_purchase">ハチミツを購入する</string>
    <string name="pb_download_confirm_btn_download">写真を受け取る</string>
    <string name="pb_download_need_update_title">ダウンロードできません</string>
    <string name="pb_download_need_update_content">この合言葉は最新のヴァージョンでダウンロードできます。</string>
    <string name="dl_btn_input_pwd_text">写真を受け取る</string>
    <string name="dl_btn_download_complete_text">写真を確認する</string>
    <string name="btn_update_download_photos">写真を受け取る</string>
    <string name="btn_update_not_now">今はやめておく</string>
    <string name="pb_update_text">この合言葉に写真が追加されました \n 追加された写真を受け取ろう！</string>
    <string name="pb_update_kuma_said">なんか増えたで！</string>
    <string name="pb_dl_sdcard_checking_title">SDカードが必要です</string>
    <string name="pb_dl_sdcard_checking_message">このアプリは大量の写真を保存するため SDカードが必要です。 SDカードを入れて再度お試してください。</string>
    <string name="dl_alert_cannot_find_album_title">見つかりません</string>
    <string name="dl_alert_cannot_find_album_msg">合言葉が合っているか確認してください。</string>
    <string name="dl_alert_upload_unfinished_title">準備中</string>
    <string name="dl_alert_upload_unfinished_msg">まだ写真の送信がおわっていないようです。しばらくして再度お試しください。</string>
    <string name="dl_alert_sdcard_missing_title">SDカードがひつようです</string>
    <string name="dl_alert_sdcard_missing_msg">このアプリは大量の写真を保存するため SDカードが必要です。 SDカードを入れて再度お試してください。</string>
    <string name="dl_alert_sdcard_full_title">SDカードの容量が足りない</string>
    <string name="dl_alert_sdcard_full_msg">SDカードの容量が足りないです、 SDカードを整理して再度お試してください。</string>
    <string name="dl_alert_confirm_cancel_download_title">キャンセルしますか？</string>
    <string name="dl_alert_confirm_cancel_download_msg">キャンセルすると受取りが中断されます。</string>
    <string name="dl_downloading_process_text">Downloading <xliff:g id="\" part="">%1$s</xliff:g>/<xliff:g id="\" total="">%2$s</xliff:g></string>
    <string name="dl_alert_unfinish_album_title">準備中</string>
    <string name="dialog_password_error_title">エラー</string>
    <string name="screen_title_dowload_input_pwd">写真を受け取る</string>
    <string name="screen_title_dowload_downloading_error">受信失敗</string>
    <string name="screen_title_dowload_downloading_complete">受け取り完了 !</string>
    <string name="screen_title_dowload_purchase_require">有効期限切れ</string>
    <string name="screen_title_dowload_purchase_complete">有効期限を延長しました</string>
    <string name="screen_title_dowload_input_exceeded">しばらくお待ちください</string>
    <string name="screen_title_dowload_update">写真が追加されました</string>
    <string name="err_desc_dowload_not_found">見つかりません</string>
    <string name="err_desc_dowload_unfinished">まだ写真の送信がおわっていないようです。しばらくして再度お試しください。</string>
    <string name="err_desc_dowload_expired">コレクションが壊れています。ダウンロードすることができません</string>
    <string name="dialog_error_title">エラー</string>
    <string name="dialog_error_network_title">通信エラー</string>
    <string name="err_desc_password_your_pass">その合言葉はむかし使いました。他の合言葉をお試しください</string>
    <string name="err_desc_password_taken">その合言葉は現在使えません。別の言葉を設定してください。</string>
    <string name="err_desc_password_to_short">合言葉が短すぎます</string>
    <string name="err_desc_password_to_long">合言葉が長過ぎます</string>
    <string name="err_desc_password_invalid_characters">使えない文字が含まれています\n</string>
    <string name="err_desc_password_invalid_character_from_server">次の文字は使えません\n</string>
    <string name="err_desc_password_public_not_found">該当の写真袋が見つかりません</string>
    <string name="err_desc_password_public_not_finised">アップロードは完了していません</string>
    <string name="err_desc_password_public_not_yours">他の人の写真袋でエントリーできません</string>
    <string name="err_desc_password_public_expired">期限切れの写真袋でエントリーできません</string>
    <string name="back_text">戻る</string>
    <string name="urenai_url">http://photobag.in/</string>
    <string name="screen_title_upload_choose_photo">写真を選択してください</string>
    <string name="screen_title_upload_input_pwd">合言葉を決める</string>
    <string name="screen_title_upload_confirm_pass">合言葉の確認</string>
    <string name="screen_title_uploading">送信中</string>
    <string name="screen_title_confirm_pass_upload">送信完了！</string>
    <string name="screen_title_select_addiblity">あとから追加 </string>
    <string name="upload_tab_main_title">写真を送る</string>
    <string name="upload_main_bear_say">何枚でも \n 送れるで</string>
    <string name="upload_main_text_guide">送りたい写真を選んで \n 合言葉で鍵をかけよう !</string>
    <string name="upload_main_btn_text"> 写真を選ぶ</string>
    <string name="upload_main_btn_video_compress_setting"> 動画の画質設定</string>
    <string name="upload_main_btn_video_compress_high_quality">高画質</string>
    <string name="upload_main_btn_video_compress_medium_quality"> 中画質(通常)</string>
    <string name="upload_main_btn_video_compress_low_quality"> 低画質</string>
    <string name="download_main_btn_text_transfer_jet"> TransferJetで受け取る</string>
    <string name="upload_main_btn_text_transfer_jet"> TransferJetで送る</string>
    <string name="upload_set_pass_bear_say">おもろい合言葉を \n 考えてみて </string>
    <string name="upload_set_pass_text_guide1">漢字、動画、記号など何でも使えます</string>
    <string name="upload_set_pass_text_guide2">※ ８文字以上３０文字以内で入力してください</string>
    <string name="upload_set_pass_btn_text">合言葉を確認する</string>
    <string name="upload_confirm_pass_bear_say">パスワードをつけると\nセキュリティが強くなるよ！ </string>
    <string name="upload_koukaibukuro_setting_bear_say">
<![CDATA[<font color=\'red\'>公開袋</font>" 
          "<font color=\'#695C5C\'>に投稿すると</font>" 
          "<font color=\'red\'>写真袋の全ユーザーにも合言<br>葉を公開する</font>" 
          "<font color=\'#695C5C\'>ことになります。<br></font>" 
          "<font color=\'#695C5C\'>仲間以外に公開したくない合言葉の送信時は設定<br>をお間違いにならないようお気をつけください。<br></font>" 
          "<font color=\'#695C5C\'>また、違反画像・動画の投稿を発見した場合は規<br>約に基づき対応させていただきます。<br></font>]]>
    </string>
    <string name="upload_koukaibukuro_setting_bear_say_updated"><![CDATA[<font color=\'red\'>公開袋</font><font color=\'#695C5C\'>に投稿する<br> みんなと共有する？</font>]]></string>
    <string name="upload_confirm_pass_text_guide">下の合言葉でよろしいですか？</string>
    <string name="upload_koukaibukuro_setting_text_guide">注意：公開袋に投稿すると仲間以外のユーザーにも合言葉を公開することになります。仲間以外に公開したくない合言葉の送信時は設定をお間違いにならないよう気をつけてください。</string>
    <string name="upload_koukaibukuro_setting_text_guide2">仲間以外に公開したくない合言葉の送信時は設定をお間違いにならないよう気をつけてください。</string>
    <string name="upload_koukaibukuro_setting_text_guide3">また、違反画像・動画の投稿を発見した場合は規約に基づき対応させていただきます。</string>
    <string name="upload_confirm_pass_complicate_btn">4桁パスワードを設定</string>
    <string name="upload_confirm_pass_ok_btn">設定しないで次へ</string>
    <string name="upload_koukaibukuro_make_password_public_btn">公開袋へ投稿する</string>
    <string name="upload_koukaibukuro_make_password_not_public_btn">いいえ。仲間だけに送信する</string>
    <string name="upload_addibility_fukidashi_text">友達が \n 写真を追加 \n できるようにする？</string>
    <string name="upload_addibility_guide_text">みんなの写真を \n １つの合言葉にまとめよう！</string>
    <string name="upload_addibility_sub_guide_text">合言葉を知っている人が写真を追加できます</string>
    <string name="upload_addibility_no_button">自分の写真でいい</string>
    <string name="upload_addibility_yes_button">追加してOK</string>
    <string name="dialog_change_pass_title">合言葉を難しくしました</string>
    <string name="uploading_normal_bear_say">送信中だよ \n もう少しまってね</string>
    <string name="uploading_progress_text">Uploading # / $</string>
    <string name="uploading_cancel_btn_text">キャンセル</string>
    <string name="uploading_retry_btn_text">もう一度</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="dialog_cancel_btn">キャンセル</string>
    <string name="pb_null"></string>
    <string name="pb_exchange_acorn_price_500">500</string>
    <string name="pb_exchange_acorn_num_0">0</string>
    <string name="pb_exchange_acorn_text_needed">必要な金ぴかドングリ</string>
    <string name="pb_exchange_acorn_text_owned">現在の金ぴかドングリ</string>
    <string name="pb_exchange_acorn_start">交換する</string>
    <string name="pb_exchange_acorn_confirm">メールで申し込みをする</string>
    <string name="pb_exchange_gold_not_enough">金ぴかドングリの数が足りないです。</string>
    <string name="pb_exchange_acorn_goods_itune">iTunes ギフトコード（500円分）</string>
    <string name="pb_exchange_acorn_goods_confirm">※毎週水曜日までの申請分を翌週木曜日に発行します。\n※ 発行時は事務局からのメール通知にてお知らせし、本人確認のため事務局が指定した合言葉をアップロードいただく必要がございます。\n※ 在庫状況によって 発行が遅れる場合があります。予めご了承ください。尚、申請より2週間経過してもコードを受け取れない場合は、アプリ内のお問い合わせよりご連絡ください。\n※ メール送信の際 は間違いのないよう、メール本文の編集はせずにお送りください。</string>
    <string name="pb_exchange_acorn_confirm_title">下記の内容で金ぴかドングリを交換しますか?</string>
    <string name="pb_exchange_acorn_confirm_extra">メール送信するとギフト交換のお申込みが完了します</string>
    <string name="pb_exchange_acorn_confirm_after">【重要】水曜日までのギフトお申込み分に関して翌週木曜日にご連絡いたします。金ぴかドングリの消費はギフトをお渡しした時点となりますのでご注意ください。\n\n※メールの送信が完了していない場合、ギフトのお引き渡しのご連絡ができません。\n\n</string>
    <string name="pb_exchange_acorn_ok_button">OK</string>
    <string name="dl_mgs">合言葉をダウンロードしますか？</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="fv_mgs">お気に入りに追加して\n
あとでダウンロードする。</string>
    <string name="fv_delete_mgs">お気に入りの一覧から削除する</string>
    <string name="fv_add">お気に入りに追加する</string>
    <string name="fv_delete">お気に入りから解除する</string>
   <string name="history_item_delete_title">以下の合言葉を削除します。\nよろしいですか？</string>
</resources>