<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg" >
    
    <com.aircast.photobag.widget.actionbar.ActionBar
        android:id="@+id/headerbar"
        style="@style/pb_actionbar" />    
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <View 
                android:layout_width="match_parent"
	            android:layout_height="20dp" />
		        
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top|center"
	            android:layout_margin="20dp"
	            android:textColor="@color/gray_deep_dark"
	            android:textSize="14sp"
	            android:textStyle="bold"
	            android:text="@string/pb_download_confirm_text_1" />
		    
		    <TextView 
		        android:id="@+id/text_download_confirm"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:padding="15dp"
		        android:background="@color/white"
		        android:textColor="@color/gray_deep_dark"
		        android:textSize="13sp"
		        android:text="@string/pb_download_confirm_text_21" />
		    
		    <TextView 
		        android:id="@+id/layout_download_confirm_days"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="10dp"
		        android:layout_gravity="center"
		        android:padding="5dp"
		        android:background="@color/gray_deep_dark"
		        android:textColor="@color/white"
		        android:textSize="13sp"
		        android:text="@string/pb_download_confirm_text_3" />
		    
		    <LinearLayout 
		        android:id="@+id/layout_download_confirm"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:orientation="horizontal"
		        android:padding="10dp" >
		
		        <ImageView
		            android:id="@+id/icon_checkbox_confirm_download"
		            android:layout_width="30dp"
		            android:layout_height="30dp"
		            android:src="@drawable/checkbox_red_off"
		            android:contentDescription="@string/pb_null" />
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:textColor="@color/gray_deep_dark"
		            android:textSize="13sp"
		            android:textStyle="bold"
		            android:text="@string/pb_download_confirm_text_4" />
		    </LinearLayout>
		    
		    <View 
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1" />
		    
            <!--
                <Button
		        android:id="@+id/btn_confirm_download"
		        style="@style/TextShadowBlack"
		        android:layout_width="fill_parent"
		        android:layout_height="@dimen/pb_btn_height"
		        android:layout_margin="35dip"
		        android:background="@drawable/btn_hard"
		        android:text="@string/pb_download_confirm_btn_download"
		        android:textColor="@color/white"
		        android:textSize="17sp"
		        android:textStyle="bold" />
            -->

            <com.aircast.photobag.widget.FButton
                android:id="@+id/btn_confirm_download"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pb_btn_height"
                android:layout_margin="35dip"
                android:text="@string/pb_download_confirm_btn_download"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:buttonColor="#935243"
                app:shadowEnabled="false" />
            
		</LinearLayout>
    </ScrollView>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" >
        <com.ad_stir.webview.AdstirWebView 
	        media="MEDIA-e194dab6"
	       spot="1"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>